--- a/pom.xml
+++ b/pom.xml
@@ -15,15 +15,16 @@
 
     <parent>
         <groupId>org.seedstack</groupId>
-        <artifactId>parent</artifactId>
-        <version>2.0.1-SNAPSHOT</version>
+        <artifactId>parent-internal</artifactId>
+        <version>2.1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>seed-solr</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <groupId>org.seedstack.addons</groupId>
+    <artifactId>solr</artifactId>
+    <version>1.0.0-M1-SNAPSHOT</version>
 
     <properties>
-        <seed.version>2.0.0</seed.version>
+        <seed.version>2.1.0-M1-SNAPSHOT</seed.version>
         <solr.version>5.2.1</solr.version>
 
         <compatibility.skip>true</compatibility.skip>
@@ -39,12 +40,9 @@
                         <includedLicenses>
                             <includedLicense>Apache 2</includedLicense>
                             <includedLicense>BSD</includedLicense>
-                            <includedLicense>EPL 1.0</includedLicense>
-                            <includedLicense>LGPL 2.1</includedLicense>
                             <includedLicense>LGPL 3.0</includedLicense>
                             <includedLicense>MIT License</includedLicense>
                             <includedLicense>MPL 2.0</includedLicense>
-                            <includedLicense>The JSON License</includedLicense>
                             <includedLicense>Public Domain</includedLicense>
                             <includedLicense>WTFPL</includedLicense>
 
@@ -56,8 +54,6 @@
                             <licenseMerge>Apache 2|The Apache Software License, Version 2.0</licenseMerge>
                             <licenseMerge>Apache 2|Apache License 2.0</licenseMerge>
                             <licenseMerge>BSD|The New BSD License</licenseMerge>
-                            <licenseMerge>EPL 1.0|Eclipse Public License, Version 1.0</licenseMerge>
-                            <licenseMerge>LGPL 2.1|GNU Lesser General Public License, Version 2.1</licenseMerge>
                             <licenseMerge>LGPL 3.0|GNU Lesser Public License</licenseMerge>
                             <licenseMerge>IGNORED_LICENSE|MPL 1.1</licenseMerge>
                             <licenseMerge>IGNORED_LICENSE|LGPL 2.1</licenseMerge>
@@ -71,12 +67,12 @@
     <dependencies>
         <dependency>
             <groupId>org.seedstack.seed</groupId>
-            <artifactId>seed-core-support-core</artifactId>
+            <artifactId>seed-core</artifactId>
             <version>${seed.version}</version>
         </dependency>
         <dependency>
             <groupId>org.seedstack.seed</groupId>
-            <artifactId>seed-transaction-support</artifactId>
+            <artifactId>seed-transaction</artifactId>
             <version>${seed.version}</version>
         </dependency>
         <dependency>
@@ -88,14 +84,14 @@
 
         <dependency>
             <groupId>org.seedstack.seed</groupId>
-            <artifactId>seed-integrationtest-support-core</artifactId>
+            <artifactId>seed-testing</artifactId>
             <version>${seed.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>1.1.3</version>
+            <version>${logback.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
