--- a/src/it/resources/META-INF/configuration/org.seedstack.solr.props
+++ b/src/it/resources/META-INF/configuration/org.seedstack.solr.props
@@ -6,11 +6,11 @@
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 #
 
-[org.seedstack.seed]
-persistence.solr.clients = client1, client2
+[org.seedstack.solr]
+clients = client1, client2
 
-[org.seedstack.seed.persistence.solr.client.client1]
+[org.seedstack.solr.client.client1]
 url = http://localhost:8983/solr/core0
 
-[org.seedstack.seed.persistence.solr.client.client2]
+[org.seedstack.solr.client.client2]
 url = http://localhost:8983/solr/core1
