--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,6 @@ install:
 
 before_script: (mkdir target && cd target && curl -sSL https://raw.githubusercontent.com/moliware/travis-solr/master/travis-solr.sh | bash)
 
-script: mvn -q -U -T 2 -Pcompatibility,snapshots,javadoc $GOAL jacoco:report
+script: mvn -q -U -T 2 -Pbuild-number,compatibility,bintray,snapshots,javadoc $GOAL jacoco:report
 
 after_success: mvn -q coveralls:report -DrepoToken=$COVERALLS_TOKEN
