--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <!--
 
-    Copyright (c) 2013-2015, The SeedStack authors <http://seedstack.org>
+    Copyright (c) 2013-2016, The SeedStack authors <http://seedstack.org>
 
     This Source Code Form is subject to the terms of the Mozilla Public
     License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -14,7 +14,7 @@
     <parent>
         <groupId>org.seedstack.poms</groupId>
         <artifactId>parent-internal</artifactId>
-        <version>2.1.0</version>
+        <version>2.3.0</version>
     </parent>
 
     <groupId>org.seedstack.addons.solr</groupId>
@@ -25,7 +25,7 @@
         <seed.version>2.1.0</seed.version>
         <solr.version>5.2.1</solr.version>
 
-        <compatibility.skip>true</compatibility.skip>
+        <compatibility.version>1.0.0</compatibility.version>
     </properties>
 
     <build>
@@ -139,7 +139,7 @@
                     <releases>
                         <enabled>true</enabled>
                     </releases>
-                    <id>bintray-seedstack-jars</id>
+                    <id>bintray</id>
                     <name>bintray</name>
                     <url>http://dl.bintray.com/seedstack/jars</url>
                 </repository>
