--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <parent>
         <groupId>org.seedstack.poms</groupId>
         <artifactId>parent-internal</artifactId>
-        <version>2.4.0-SNAPSHOT</version>
+        <version>2.4.0</version>
     </parent>
 
     <groupId>org.seedstack.addons.solr</groupId>
@@ -22,7 +22,7 @@
     <version>1.0.2-SNAPSHOT</version>
 
     <properties>
-        <seed.version>2.3.0-SNAPSHOT</seed.version>
+        <seed.version>2.3.0</seed.version>
         <solr.version>5.2.1</solr.version>
 
         <compatibility.version>1.0.0</compatibility.version>
