--- a/pom.xml
+++ b/pom.xml
@@ -14,18 +14,18 @@
     <parent>
         <groupId>org.seedstack.poms</groupId>
         <artifactId>parent-internal</artifactId>
-        <version>2.4.0</version>
+        <version>3.0.0</version>
     </parent>
 
     <groupId>org.seedstack.addons.solr</groupId>
     <artifactId>solr</artifactId>
-    <version>1.0.2-SNAPSHOT</version>
+    <version>2.0.0-SNAPSHOT</version>
 
     <properties>
-        <seed.version>2.3.0</seed.version>
+        <seed.version>3.0.1-SNAPSHOT</seed.version>
         <solr.version>5.2.1</solr.version>
 
-        <compatibility.version>1.0.0</compatibility.version>
+        <compatibility.skip>true</compatibility.skip>
 
         <bintray.package>solr-addon</bintray.package>
     </properties>
@@ -54,6 +54,8 @@
                             <licenseMerge>Apache 2|Apache License, Version 2.0</licenseMerge>
                             <licenseMerge>Apache 2|The Apache Software License, Version 2.0</licenseMerge>
                             <licenseMerge>Apache 2|Apache License 2.0</licenseMerge>
+                            <licenseMerge>Apache 2|Apache License, version 2.0</licenseMerge>
+                            <licenseMerge>Apache 2|Apache License Version 2.0</licenseMerge>
                             <licenseMerge>BSD|The New BSD License</licenseMerge>
                             <licenseMerge>CDDL|CDDL + GPLv2 with classpath exception</licenseMerge>
                             <licenseMerge>LGPL 3.0|GNU Lesser Public License</licenseMerge>
@@ -70,11 +72,6 @@
         <dependency>
             <groupId>org.seedstack.seed</groupId>
             <artifactId>seed-core</artifactId>
-            <version>${seed.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.seedstack.seed</groupId>
-            <artifactId>seed-transaction</artifactId>
             <version>${seed.version}</version>
         </dependency>
         <dependency>
