--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
     <version>2.0.0-SNAPSHOT</version>
 
     <properties>
-        <seed.version>3.0.1-SNAPSHOT</seed.version>
+        <seed.version>3.0.1</seed.version>
         <solr.version>5.2.1</solr.version>
 
         <compatibility.skip>true</compatibility.skip>
